--- a/2016-04-18-veille_20160417_markdown.md
+++ b/2016-04-18-veille_20160417_markdown.md
@@ -12,7 +12,7 @@ published: true
 
 ### Enjeux et débats
 
-**Découvrir** "... qu'entend-on exactement par données ? Quels sont les enjeux autour de leur gestion ou de leur analyse ? Quels impacts sur la société ?" - Billet "Les données en question" par Stéphane Grumbach (INRIA IXXI) et Patrick Valduriez (INRIA) - Interstices - 31 mars 2016 - 
+**Découvrir** "... qu'entend-on exactement par données ? Quels sont les enjeux autour de leur gestion ou de leur analyse ? Quels impacts sur la société ?" - Billet "Les données en question" par Stéphane Grumbach (INRIA IXXI) et Patrick Valduriez (INRIA) - *Interstices* - 31 mars 2016 - 
 
 [https://interstices.info/jcms/p_84069/les-donnees-en-question](https://interstices.info/jcms/p_84069/les-donnees-en-question)
 
@@ -20,17 +20,17 @@ published: true
 
 [http://www.eprist.fr/la-recherche-publique-pourrait-rapidement-disposer- dun-cadre-juridique-secure-pour-porter-ses-developpements-tdm/](http://www.eprist.fr/la-recherche-publique-pourrait-rapidement-disposer- dun-cadre-juridique-secure-pour-porter-ses-developpements-tdm/)
 
-**Nominalisme du big data** - Compte rendu de la conférence de Bruno Bachimont intitulée "Larchive et la massification des données : une nouvelle raison numérique ?" donnée pour l'ouverture du Forum des archivistes de l'AAF à Troyes le 30 mars 2016 - via Martin Grandjean - 
+**Nominalisme du big data** - Compte rendu de la conférence de Bruno Bachimont intitulée "L'archive et la massification des données : une nouvelle raison numérique ?" donnée pour l'ouverture du Forum des archivistes de l'AAF à Troyes, le 30 mars 2016 - via Martin Grandjean - 
 
 [http://www.martingrandjean.ch/archive-donnee-bruno-bachimont/](http://www.martingrandjean.ch/archive-donnee-bruno-bachimont/)
 
 ### Dates limites
 
-18.04.2016 | **Colloque**  "Les corpus de textes numériques comme objets de recherche", organisé par A. Barbaresi, Académie des sciences d'Autriche - 18-19 avril 2016, ENS de Lyon - 
+18.04.2016 | **Colloque**  "Les corpus de textes numériques comme objets de recherche", organisé par A. Barbaresi (Académie des sciences d'Autriche) - 18-19 avril 2016, ENS de Lyon - 
 
 [http://ihrim.ens-lyon.fr/manifestations/article/les-corpus-de-textes-num eriques-comme-objets-de-recherche](http://ihrim.ens-lyon.fr/manifestations/article/les-corpus-de-textes-num eriques-comme-objets-de-recherche)
 
-21.04.2016 | **Coopération scientifique** - Le Campus Condorcet lance un appel à projets pour soutenir des actions de coopération scientifique : projets en rapport avec les humanités numériques bienvenus - 
+21.04.2016 | **Coopération scientifique** - Le Campus Condorcet lance un appel à projets pour soutenir des actions de coopération scientifique - projets en rapport avec les humanités numériques bienvenus - 
 
 [http://www.campus-condorcet.fr/Activites-scientifiques/Les-appels-a-proj ets/Les-modalites-de-candidature-2016-2017](http://www.campus-condorcet.fr/Activites-scientifiques/Les-appels-a-proj ets/Les-modalites-de-candidature-2016-2017)
 
@@ -38,27 +38,9 @@ published: true
 
 [http://corist-shs.cnrs.fr/Donnees_corpus_MSHPoitiers_2016](http://corist-shs.cnrs.fr/Donnees_corpus_MSHPoitiers_2016)
 
-24.04.2016 | Appel à résumés pour le Symposium international DIXIT "Digital Scholarly Editions as Interfaces" (23-24 septembre 2016 Austrian Centre for Digital Humanities) - 
+24.04.2016 | **Appel à résumés** pour le Symposium international DIXIT "Digital Scholarly Editions as Interfaces" (23-24 septembre 2016 Austrian Centre for Digital Humanities) - 
 
 [https://informationsmodellierung.uni-graz.at/en/events/digital-scholarly -editions-as-interfaces/](https://informationsmodellierung.uni-graz.at/en/events/digital-scholarly -editions-as-interfaces/)
-
-28.04.2016 (Rappel) | **Images et archéologie** - Séminaire "pratiques numériques en SHS" de la MSH Val de Loire - Interventions de N. Lubtchansky "Lier l'iconographie au contexte archéologique" et de G. Sarah "La plate-forme de numérisation des monnaies et objets archéologiques de la MSH Val-de-Loire - [http://calenda.org/351204](http://calenda.org/351204)
-
-29.04.2016 (Rappel) | **Données archéologiques** - Séjours d'étude et de formation à la gestion des données archéologiques (ARIADNE) assortis de bourses pouvant aller jusqu'à 1000 euros - 
-
-[http://www.ariadne-infrastructure.eu/Transnational-Access/2016-TNA-Call](http://www.ariadne-infrastructure.eu/Transnational-Access/2016-TNA-Call)
-
-**TGIR Huma-Num**  | Découvrir le paysage des communautés scientifiques et des services numériques de la Très grande infrastructure de recherche Huma-Num - 29 avril 2016, MMSH, Aix-en-Provence - 
-
-[http://corist-shs.cnrs.fr/Huma-Num_MMSH_2016](http://corist-shs.cnrs.fr/Huma-Num_MMSH_2016)
-
-**Archéologie innovante** | 5ème édition des *Journées Informatique et Archéologie* de Paris (JIAP 2016), Institut dArt et d'Archéologie, 2-4 juin 2016 - 
-
-[http://calenda.org/347380](http://calenda.org/347380)
-
-Information géographique 3D - Séminaire "Information géographique 3D et pratique scientifique", co-organisé par le Studio IMU et le GDR MAGIS - 4 mai 2014, IUT Lyon 7e - 
-
-[http://imu.universite-lyon.fr/seminaire-information-geographique-3d-et-p ratique-scientifique/](http://imu.universite-lyon.fr/seminaire-information-geographique-3d-et-p ratique-scientifique/)
 
 22.04.2016 | Appel à résumés pour les journées "Données métadonnées des corpus et catalogage des objets en sciences humaines et sociales", 6-7 juin 2016, organisées par la MSH de Poitiers - 
 
@@ -68,35 +50,49 @@ Information géographique 3D - Séminaire "Information géographique 3D et prati
 
 [http://ecultures.hypotheses.org/232](http://ecultures.hypotheses.org/232)
 
-27.04.2016 | **Appel à propositions** pour l'action de formation "Collecter et produire des données et des corpus pour mieux les traiter : quels besoins pour la recherche en SHS aujourdhui ?" (15-18 novembre 2016 Caes de Fréjus) organisée par le réseau Mate-SHS - 
+28.04.2016 (Rappel) | **Images et archéologie** - Séminaire "pratiques numériques en SHS" de la MSH Val de Loire - Interventions de N. Lubtchansky "Lier l'iconographie au contexte archéologique" et de G. Sarah "La plate-forme de numérisation des monnaies et objets archéologiques de la MSH Val-de-Loire" - [http://calenda.org/351204](http://calenda.org/351204)
+
+29.04.2016 (Rappel) | **Données archéologiques** - Séjours d'étude et de formation à la gestion des données archéologiques, dans le cadre du réseau européen ARIADNE, assortis de bourses (jusqu'à 1000 euros) - 
+
+[http://www.ariadne-infrastructure.eu/Transnational-Access/2016-TNA-Call](http://www.ariadne-infrastructure.eu/Transnational-Access/2016-TNA-Call)
+
+27.04.2016 | **Appel à propositions** pour l'action de formation "Collecter et produire des données et des corpus pour mieux les traiter : quels besoins pour la recherche en SHS aujourdhui ?" (15-18 novembre 2016 Caes de Fréjus), organisée par le réseau Mate-SHS - 
 
 [https://anf-mate2016.sciencesconf.org/resource/page/id/1](https://anf-mate2016.sciencesconf.org/resource/page/id/1)
+
+29.04.2016 (Rappel) | **Infrastructure numérique** - Découvrir le paysage des communautés scientifiques et des services numériques de la TGIRHuma-Num à la MMSH d'Aix-en-Provence - 
+
+[http://corist-shs.cnrs.fr/Huma-Num_MMSH_2016](http://corist-shs.cnrs.fr/Huma-Num_MMSH_2016)
+
+01.05.2016 | **Appel à projets** Langues et numérique 2016 de la délégation générale à la langue française et aux langues de France : "prendre en compte la dimension linguistique des technologies numériques" - 
+
+[http://www.culturecommunication.gouv.fr/Politiques-ministerielles/Langue -francaise-et-langues-de-France/Politiques-de-la-langue/Langues-et-numer ique/Appel-a-projets-Langues-et-numerique-2016](http://www.culturecommunication.gouv.fr/Politiques-ministerielles/Langue -francaise-et-langues-de-France/Politiques-de-la-langue/Langues-et-numer ique/Appel-a-projets-Langues-et-numerique-2016)
 
 01.05.2016 (Rappel) | **Appel à communications** - Digital Humanities Congress 2016, Université de Sheffield, 8-10 septembre 2016 - 
 
 [https://www.sheffield.ac.uk/hri/dhc/dhc2016](https://www.sheffield.ac.uk/hri/dhc/dhc2016)
 
-01.05.2016 | **Appel à projets** "Langues et numérique 2016" de la délégation générale à la langue française et aux langues de France : "prendre en compte la dimension linguistique des technologies numériques" - 
+04.05.2016 | **Information géographique 3D** - Séminaire "Information géographique 3D et pratique scientifique", co-organisé par le Studio IMU et le GDR MAGIS - 4 mai 2014, IUT Lyon 7e - 
 
-[http://www.culturecommunication.gouv.fr/Politiques-ministerielles/Langue -francaise-et-langues-de-France/Politiques-de-la-langue/Langues-et-numer ique/Appel-a-projets-Langues-et-numerique-2016](http://www.culturecommunication.gouv.fr/Politiques-ministerielles/Langue -francaise-et-langues-de-France/Politiques-de-la-langue/Langues-et-numer ique/Appel-a-projets-Langues-et-numerique-2016)
+[http://imu.universite-lyon.fr/seminaire-information-geographique-3d-et-p ratique-scientifique/](http://imu.universite-lyon.fr/seminaire-information-geographique-3d-et-p ratique-scientifique/)
 
-09.05.2016 | **Formation** - Une ANF pour permettre aux professionnels de l'IST de mieux accompagner les chercheurs pour la création de plans de gestion de données, ce nouveau livrable des projets européen - 
+09.05.2016 | **Formation** - Une ANF pour permettre aux professionnels de l'IST de mieux accompagner les chercheurs pour la création de plans de gestion de données, ce nouveau livrable des projets européens - 
 
 [http://www.inist.fr/?Une-ANF-sur-la-gestion-des-donnees](http://www.inist.fr/?Une-ANF-sur-la-gestion-des-donnees)
 
-15.05.2016 (Rappel) | **Ecole d'été Humanités numériques** - Public cible : historiens, archéologues, philologues, chercheurs en sciences de l'antiquité, conservateurs et spécialistes du patrimoine culturel  - 
+15.05.2016 (Rappel) | **Ecole d'été** Humanités numériques - Public cible : historiens, archéologues, philologues, chercheurs en sciences de l'antiquité, conservateurs et spécialistes du patrimoine culturel  - 
 
 [http://www.stoa.org/archives/2240](http://www.stoa.org/archives/2240)
 
-16.05.2016 (Rappel) | **Philologie numérique** - Programme transatlantique de la FMSH de collaboration en humanités numériques, avec une attention spéciale aux projets de philologie - 
+16.05.2016 (Rappel) | **Philologie numérique** - Programme transatlantique de la FMSH de collaboration en humanités numériques, avec une attention spéciale portée aux projets de philologie - 
 
 [http://www.fmsh.fr/fr/c/8207](http://www.fmsh.fr/fr/c/8207)
 
-15.05.2016 | **Appel à contributions** DHNord2016 "Humanités numériques : théories débats approches critiques" (Lille semaine du 21 novembre 2016), organisé par la MESHS (Lille) - 
+15.05.2016 | **Appel à contributions** DHNord2016 "Humanités numériques : théories débats approches critiques" (Lille, semaine du 21 novembre 2016), organisé par la MESHS - 
 
 [http://calenda.org/363234](http://calenda.org/363234)
 
-24.05.2016 (Rappel) | **Humanités numériques et données ouvertes**, conférences, forum de projets et ateliers de formation sur 2 journées, organisées dans le cadre du Programme Avenir Lyon St-Etienne les 24 et 25 mai 2016 à l'UDL - 
+24.05.2016 (Rappel) | **Humanités numériques et données ouvertes**, conférences, forum de projets et ateliers de formation sur 2 journées, organisées dans le cadre du Programme Avenir Lyon St-Etienne les 24 et 25 mai 2016 à l'Université de Lyon - 
 
 [https://hnlyon2016.sciencesconf.org/](https://hnlyon2016.sciencesconf.org/)
 
@@ -108,19 +104,23 @@ Information géographique 3D - Séminaire "Information géographique 3D et prati
 
 [https://www.msh-alpes.fr/fr/appel-communications-humanites-numeriques-ic onographie-cas-peinture-murale-alpine](https://www.msh-alpes.fr/fr/appel-communications-humanites-numeriques-ic onographie-cas-peinture-murale-alpine)
 
-06.06.2016 | **Ecole d'été** Humanités numériques - Inscriptions ouvertes pour Digital Humanities @ Oxford (DHOxSS 2016) - Destinées aux chercheurs et ingénieurs souhaitant développer des projets d'humanités numériques ou souhaitant découvrir comment les HN peuvent contribuer aux projets de SHS - 8 ateliers pour se former auprès d'experts (TEI Linked Data Analyse de données des SHS social humanities...) - 
+02.06.2016 (Rappel) | **Archéologie innovante**  - 5ème édition des *Journées Informatique et Archéologie* de Paris (JIAP 2016), Institut dArt et d'Archéologie, 2-4 juin 2016 - 
+
+[http://calenda.org/347380](http://calenda.org/347380)
+
+06.06.2016 | **Ecole d'été** Humanités numériques - Inscriptions ouvertes pour Digital Humanities @ Oxford (DHOxSS 2016) - Destinées aux chercheurs et ingénieurs souhaitant développer des projets d'humanités numériques ou découvrir comment les HN peuvent contribuer aux projets de SHS (ateliers : TEI, Linked Data, Analyse de données SHS, "social humanities"...) - 
 
 [http://digital.humanities.ox.ac.uk/dhoxss/2016/](http://digital.humanities.ox.ac.uk/dhoxss/2016/)
 
-09.06.2016 - **Formation** OpenRefine : OpenRefine est un outil puissant pour manipuler de grandes quantités de données permettant des opérations de nettoyage en masse l'exploration rapide de jeux de données la conversion... Ateliers "Les TIC et lArt " de l'INHA - InVisu - Jeudi 9 juin 2016, 10h-12h, INHA Paris - 
+09.06.2016 - **Formation** OpenRefine - Outil puissant pour manipuler de grandes quantités de données permettant des opérations de nettoyage en masse l'exploration rapide de jeux de données la conversion... Ateliers "Les TIC et lArt " de l'INHA - InVisu - Jeudi 9 juin 2016, 10h-12h, INHA Paris - 
 
 [http://invisu.inha.fr/fr/formations/les-tic-et-l-art.html](http://invisu.inha.fr/fr/formations/les-tic-et-l-art.html)
 
-24.06.2016 | **Appel à projets** pour le salon *Innovatives SHS 2017* (17-18 mai 2017 Marseille) - Cet appel à candidature concerne des projets concrets de valorisation (outils logiciels ou multimédia innovation de transfert de rupture ou dusage de connaissances) et s'adresse à toutes les équipes de recherche en SHS - 
+24.06.2016 | **Appel à projets** pour le salon *Innovatives SHS 2017* (17-18 mai 2017 Marseille) - Concerne des projets concrets de valorisation (outils logiciels ou multimédia innovation de transfert de rupture ou d'usage de connaissances) et s'adresse à toutes les équipes de recherche en SHS - 
 
 [http://innovatives.cnrs.fr/presentation/actualites/article/appel-a-proje ts-pour-le-salon-innovatives-shs-2017-17-18-mai-2017-marseille](http://innovatives.cnrs.fr/presentation/actualites/article/appel-a-proje ts-pour-le-salon-innovatives-shs-2017-17-18-mai-2017-marseille)
 
-11.07.2016 | **DH2016** Référentiels géo-historiques et données liées (Linked Open Data) - Workshop : "A place for places: current trends and challenges in the development and use of geo-historical gazetteers" en marge du colloque international DH2016, Cracovie (Pologne) - 
+11.07.2016 | **DH2016** Référentiels géo-historiques et données liées (Linked Open Data) - Workshop : "A place for places: current trends and challenges in the development and use of geo-historical gazetteers", en marge du colloque international DH2016, Cracovie (Pologne) - 
 
 [http://calenda.org/363962](http://calenda.org/363962)
 
@@ -128,7 +128,7 @@ Information géographique 3D - Séminaire "Information géographique 3D et prati
 
 ### France
 
-**Projet européen** - La Commission européenne et la France inscrivent le projet dinfrastructure E-RIHS pour les Sciences du patrimoine sur leur feuille de route des infrastructures de recherche 2016 - via Charlotte Renault INRIA 14 avril 2016 - 
+**Projet européen** - La Commission européenne et la France inscrivent le projet d'infrastructure E-RIHS pour les Sciences du patrimoine sur leur feuille de route des infrastructures de recherche 2016 - via Charlotte Renault, INRIA, 14 avril 2016 - 
 
 [https://www.inria.fr/centre/saclay/actualites/le-projet-d-infrastructure -e-rihs](https://www.inria.fr/centre/saclay/actualites/le-projet-d-infrastructure -e-rihs)
 
@@ -170,7 +170,7 @@ Information géographique 3D - Séminaire "Information géographique 3D et prati
 
 [http://eprints.rclis.org/28188/](http://eprints.rclis.org/28188/)
 
-**Projets européens** - Traduction française de 2 guides pour Horizon 2020 - 1 : libre accès aux publications scientifiques et aux données de la recherche ; 2 : lignes directrices concernant la gestion des données et lélaboration dun plan de gestion de ces données - via Libre accès à linformation scientifique et technique - 
+**Projets européens** - Traduction française de 2 guides pour Horizon 2020 - 1 : libre accès aux publications scientifiques et aux données de la recherche ; 2 : lignes directrices concernant la gestion des données et l'élaboration d’un plan de gestion de ces données - via Libre accès à l’information scientifique et technique - 
 
 [http://openaccess.inist.fr/?Traduction-francaise-des-guides-745](http://openaccess.inist.fr/?Traduction-francaise-des-guides-745)
 
