Update/Create 2016-04-18-veille_20160417_markdown.md

--- a/2016-04-18-veille_20160417_markdown.md
+++ b/2016-04-18-veille_20160417_markdown.md
@@ -42,7 +42,7 @@ published: true
 
 [https://informationsmodellierung.uni-graz.at/en/events/digital-scholarly -editions-as-interfaces/](https://informationsmodellierung.uni-graz.at/en/events/digital-scholarly -editions-as-interfaces/)
 
-22.04.2016 | Appel à résumés pour les journées "Données métadonnées des corpus et catalogage des objets en sciences humaines et sociales", 6-7 juin 2016, organisées par la MSH de Poitiers - 
+22.04.2016 | **Appel à résumés** pour les journées "Données métadonnées des corpus et catalogage des objets en sciences humaines et sociales", 6-7 juin 2016, organisées par la MSH de Poitiers - 
 
 [http://calenda.org/360724](http://calenda.org/360724)
 
