Update/Create 2017-02-08-veille-dh-hisoma-2017-01.md

--- a/2017-02-08-veille-dh-hisoma-2017-01.md
+++ b/2017-02-08-veille-dh-hisoma-2017-01.md
@@ -8,49 +8,49 @@ published: true
 ---
 ###Enjeux et débats
 
-**La révolution de la donnée au Royaume-Uni - Septembre/Octobre 2016 n° 80 ** | Ambassade de France au Royaume-Uni -  [http://www.diplomatie.gouv.fr/IMG/pdf/20161118_sst80bigdata-vf-website_cle08916e.pdf](Url)
+**La révolution de la donnée au Royaume-Uni - Septembre/Octobre 2016 n° 80** | Ambassade de France au Royaume-Uni -  [http://www.diplomatie.gouv.fr/IMG/pdf/20161118_sst80bigdata-vf-website_cle08916e.pdf](Url)
 
-**Hayles N.-Katherine. 2016. Lire et penser en milieux numériques: Attention récits technogenèse. Grenoble: ELLUG - note de lecture d'Ingrid Mayeur ** | Carnet hypotheses Dériv@tions -  [https://driv.hypotheses.org/212](Url)
+**Hayles N.-Katherine. 2016. Lire et penser en milieux numériques: Attention récits technogenèse. Grenoble: ELLUG - note de lecture d'Ingrid Mayeur** | Carnet hypotheses Dériv@tions -  [https://driv.hypotheses.org/212](Url)
 
-**Définir les humanités numériques billet d'étudiant ** | Carnet hypothese "Métiers des archives et des bibliothèques : médiation de l'histoire et humanités numériques" -  [https://masterabd.hypotheses.org/404](Url)
+**Définir les humanités numériques billet d'étudiant** | Carnet hypothese "Métiers des archives et des bibliothèques : médiation de l'histoire et humanités numériques" -  [https://masterabd.hypotheses.org/404](Url)
 
-**La transparence ne suffira pas par Hubert Guillaud ** | InternetActu.net -  [http://www.internetactu.net/2017/01/13/la-transparence-ne-suffira-pas/](Url)
+**La transparence ne suffira pas par Hubert Guillaud** | InternetActu.net -  [http://www.internetactu.net/2017/01/13/la-transparence-ne-suffira-pas/](Url)
 
 ###France
 
-**La participation de la France dans DARIAH : 2016-2019 ** | Le blog d'Huma-Num et de ses consortiums. -  [http://humanum.hypotheses.org/2675](Url)
+**La participation de la France dans DARIAH : 2016-2019** | Le blog d'Huma-Num et de ses consortiums. -  [http://humanum.hypotheses.org/2675](Url)
 
-**Huma-Num : La TGIR des humanités numériques ** | UPtv la WebTV de l'Université de Poitiers -  [http://uptv.univ-poitiers.fr/program/huma-num-la-tgir-des-humanites-numeriques.html](Url)
+**Huma-Num : La TGIR des humanités numériques** | UPtv la WebTV de l'Université de Poitiers -  [http://uptv.univ-poitiers.fr/program/huma-num-la-tgir-des-humanites-numeriques.html](Url)
 
-**Enseigner le numérique en licence d'histoire : un retour d'expérience - ** | La boîte à outils des historiens -  [[http://www.boiteaoutils.info/2016/12/enseigner-numerique-licence-histoire/?utm_campaign=crowdfire&utm_content=crowdfire&utm_medium=social&utm_source=twitter#15233333-tw%231486149999167](Url)](http://www.boiteaoutils.info/2016/12/enseigner-numerique-licence-histoire/?utm_campaign=crowdfire&utm_content=crowdfire&utm_medium=social&utm_source=twitter#15233333-tw%231486149999167](Url))
+**Enseigner le numérique en licence d'histoire : un retour d'expérience** | La boîte à outils des historiens -  [[http://www.boiteaoutils.info/2016/12/enseigner-numerique-licence-histoire/?utm_campaign=crowdfire&utm_content=crowdfire&utm_medium=social&utm_source=twitter#15233333-tw%231486149999167](Url)](http://www.boiteaoutils.info/2016/12/enseigner-numerique-licence-histoire/?utm_campaign=crowdfire&utm_content=crowdfire&utm_medium=social&utm_source=twitter#15233333-tw%231486149999167](Url))
 
 ###International
 
-**Funding: EADH calls for Knowledge Transfer Bursaries proposals ** | EADH - The European Association for Digital Humanities -  [https://eadh.org/news/2017/01/23/funding-eadh-calls-knowledge-transfer-bursaries-proposals](Url)
+**Funding: EADH calls for Knowledge Transfer Bursaries proposals** | EADH - The European Association for Digital Humanities -  [https://eadh.org/news/2017/01/23/funding-eadh-calls-knowledge-transfer-bursaries-proposals](Url)
 
 ###Archéologie et numérique
 
-**Dessin archéologique et documentation graphique. Petit itinéraire dune mine de plomb à une souris ** | Le carnet de la MAFKF -  [http://mafkf.hypotheses.org/1232](Url)
+**Dessin archéologique et documentation graphique. Petit itinéraire dune mine de plomb à une souris** | Le carnet de la MAFKF -  [http://mafkf.hypotheses.org/1232](Url)
 
-**Colloque  Archivage publication et mise à disposition de données archéologiques  : les vidéos sont en ligne ** | Consortium MASA -  [https://masa.hypotheses.org/270](Url)
+**Colloque  Archivage publication et mise à disposition de données archéologiques  : les vidéos sont en ligne** | Consortium MASA -  [https://masa.hypotheses.org/270](Url)
 
-**Visualisation de données archéologiques : le prix OpenContext & Carleton University est attribué à Poggio Civitate VR Data Viewer ** | Electric Archeology -  [https://electricarchaeology.ca/2017/01/31/the-opencontext-carleton-prize-for-archaeological-data-visualization/](Url)
+**Visualisation de données archéologiques : le prix OpenContext & Carleton University est attribué à Poggio Civitate VR Data Viewer** | Electric Archeology -  [https://electricarchaeology.ca/2017/01/31/the-opencontext-carleton-prize-for-archaeological-data-visualization/](Url)
 
 **Dossier spécial "Big Data et information géographique" dans la Lettre de l'INSHS n° 45 - janvier 2017** |  -  [http://www.cnrs.fr/inshs/Lettres-information-INSHS/lettre_infoinshs45.pdf](Url)
 
-**"Evaluating moral and ethical rights in heritage material" : lancement d'un groupe de travail pour réévaluer les chartes et les guides de bonnes pratiques ** | Europeana Professional -  [http://pro.europeana.eu/blogpost/moral-and-ethical-rights-working-towards-usage-guidelines](Url)
+**"Evaluating moral and ethical rights in heritage material" : lancement d'un groupe de travail pour réévaluer les chartes et les guides de bonnes pratiques** | Europeana Professional -  [http://pro.europeana.eu/blogpost/moral-and-ethical-rights-working-towards-usage-guidelines](Url)
 
-**Les humanités numériques dans un master d'antiquisants ** | Carnet hypotheses "Classiques et numérique" -  [http://classnum.hypotheses.org/](Url)
+**Les humanités numériques dans un master d'antiquisants** | Carnet hypotheses "Classiques et numérique" -  [http://classnum.hypotheses.org/](Url)
 
-**Programmes et cours en ligne pour l'enseignement des sciences de l'Antiquité dans un monde numérique ** | Consortium SunoikisisDC -  [https://github.com/SunoikisisDC/SunoikisisDC-2016/wiki](Url)
+**Programmes et cours en ligne pour l'enseignement des sciences de l'Antiquité dans un monde numérique** | Consortium SunoikisisDC -  [https://github.com/SunoikisisDC/SunoikisisDC-2016/wiki](Url)
 
-**"Tales of many places: Data Infrastructure for Named Entities" - Réflexions en cours au sujet des de la modélisation des lieux anciens et des ontologies géographiques ** | Stuart Dunn's Blog -  [https://stuartdunn.wordpress.com/2017/01/28/tales-of-many-places-data-infrastructure-for-named-entities/](Url)
+**"Tales of many places: Data Infrastructure for Named Entities" - Réflexions en cours au sujet des de la modélisation des lieux anciens et des ontologies géographique** | Stuart Dunn's Blog -  [https://stuartdunn.wordpress.com/2017/01/28/tales-of-many-places-data-infrastructure-for-named-entities/](Url)
 
 ###Edition de sources anciennes
 
 **Plokamos un nouvel outil d'annotation sémantique pour la plateforme d'édition de sources épigraphiques Perseids** |  -  [http://sites.tufts.edu/perseids/2016/12/16/announcing-plokamos-a-semantic-annotation-tool/](Url)
 
-**Lancement du projet "The First One-Thousand Years of Greek" - collecte d'éditions et mise à disposition de fichiers TEI en libre accès  ** | Open Greek and Latin Project -  [http://opengreekandlatin.github.io/First1KGreek/](Url)
+**Lancement du projet "The First One-Thousand Years of Greek" - collecte d'éditions et mise à disposition de fichiers TEI en libre accès** | Open Greek and Latin Project -  [http://opengreekandlatin.github.io/First1KGreek/](Url)
 
 **"Digital Textual Editions and Corpora" appel à contribution de la "Digital Classics Association" - Date limite : 01/03/2017** |  -  [https://classicalstudies.org/annual-meeting/2018/149/call-papers-%E2%80%9Cdigital-textual-editions-and-corpora%E2%80%9D](Url)
 
@@ -62,27 +62,27 @@ published: true
 
 **Introduction à Python** | Tutoriel de Pontelneptique -  [https://github.com/PonteIneptique/python-course](Url)
 
-**"If You See Something Save Something" : 6 manières de sauvegarder des pages dans The Wayback Machine ** | Internet Archive Blogs -  [http://blog.archive.org/2017/01/25/see-something-save-something/](Url)
+**"If You See Something Save Something" : 6 manières de sauvegarder des pages dans The Wayback Machine** | Internet Archive Blogs -  [http://blog.archive.org/2017/01/25/see-something-save-something/](Url)
 
-**Nouvelles versions pour les API dISIDORE ** | Le blog d'Huma-Num et de ses consortiums -  [https://humanum.hypotheses.org/3033](Url)
+**Nouvelles versions pour les API d'ISIDORE** | Le blog d'Huma-Num et de ses consortiums -  [https://humanum.hypotheses.org/3033](Url)
 
 ###Données de la recherche / IST
 
-**Les bénéfices des identifiants ORCID pour les chercheurs et leurs institutions - note de l'association EPRIST ** | LaList -  [http://lalist.inist.fr/?p=22250](Url)
+**Les bénéfices des identifiants ORCID pour les chercheurs et leurs institutions - note de l'association EPRIST** | LaList -  [http://lalist.inist.fr/?p=22250](Url)
 
-**Publier autrement pour mieux diffuser les résultats de la science - Interview d' O. Le Gall DG délégué de l'INRA ** | @AEFsuprecherche -  [https://twitter.com/Inra_France/status/824527392580440065](Url)
+**Publier autrement pour mieux diffuser les résultats de la science - Interview d' O. Le Gall DG délégué de l'INRA** | @AEFsuprecherche -  [https://twitter.com/Inra_France/status/824527392580440065](Url)
 
-**Gestion des données de la recherche : quelques pistes pour démarrer comprendre et se former - Episode 9 ** | CORIST-SHS -  [http://corist-shs.cnrs.fr/gestion_donnees_recherche_guideetformation_9](Url)
+**Gestion des données de la recherche : quelques pistes pour démarrer comprendre et se former - Episode 9** | CORIST-SHS -  [http://corist-shs.cnrs.fr/gestion_donnees_recherche_guideetformation_9](Url)
 
-**Carrefour de l'IST 2017 : Quelles missions & compétences à réinventer pour les professionnels de l'IST - Nancy 20-21 mars 2017  ** | Sciencesconf.org -  [https://carist.sciencesconf.org/](Url)
+**Carrefour de l'IST 2017 : Quelles missions & compétences à réinventer pour les professionnels de l'IST - Nancy 20-21 mars 2017** | Sciencesconf.org -  [https://carist.sciencesconf.org/](Url)
 
-**Livre blanc Une Science ouverte dans une République numérique Guide stratégique ** | OpenEdition Press -  [http://books.openedition.org/oep/1706](Url)
+**Livre blanc Une Science ouverte dans une République numérique Guide stratégique** | OpenEdition Press -  [http://books.openedition.org/oep/1706](Url)
 
-**Séminaire : "Outils et services pour la gestion et l'ouverture des données scientifiques : retours d'expériences" ** | à l'INRA (Paris) - 16/02/2017 -  [https://seminaire.inra.fr/data/Pre-programme](Url)
+**Séminaire : "Outils et services pour la gestion et l'ouverture des données scientifiques : retours d'expériences"** | à l'INRA (Paris) - 16/02/2017 -  [https://seminaire.inra.fr/data/Pre-programme](Url)
 
 ###Evénements passés
 
-**"Toward a Cyberinfrastructure for Syriac Literature: Mapping a Text Corpus using TEI and RDF" conférence de Nathan Gibson (Vanderbilt) - 24 janvier 2017 ** | Digital Classicist Berlin -  [http://de.digitalclassicist.org/berlin/2017/01/24/Gibson.html](Url)
+**"Toward a Cyberinfrastructure for Syriac Literature: Mapping a Text Corpus using TEI and RDF" conférence de Nathan Gibson (Vanderbilt) - 24 janvier 2017** | Digital Classicist Berlin -  [http://de.digitalclassicist.org/berlin/2017/01/24/Gibson.html](Url)
 
-**Conférence : "Epigraphic Interoperability of Ancient Texts" & "From the philology of ancient Sumer to the semantic web" ** | CafE.phe & EphéNum, Ecole Pratique des Hautes Etudes - 27 janvier 2017 -  [https://ephenum.hypotheses.org/1168](Url)
+**Conférence : "Epigraphic Interoperability of Ancient Texts" & "From the philology of ancient Sumer to the semantic web"** | CafE.phe & EphéNum, Ecole Pratique des Hautes Etudes - 27 janvier 2017 -  [https://ephenum.hypotheses.org/1168](Url)
 
